fix initial flash and details view layout issues

--- a/sw-embed/src/styles/sw-embed.css
+++ b/sw-embed/src/styles/sw-embed.css
@@ -2,6 +2,7 @@ sw-channel {
   width: 100%;
   display: block;
   text-align: center;
+  visibility: hidden;
 }
 
 sw-channel > img {
@@ -11,9 +12,12 @@ sw-channel > img {
 sw-collection, sw-video-details, sw-player {
   margin: 0 auto 0 auto;
   text-align: left;
-  width: fit-content;
   max-width: 1000px;
   display: block;
+}
+
+sw-collection, sw-player {
+  width: fit-content;
 }
 
 sw-media {
@@ -30,6 +34,10 @@ sw-media > a {
 sw-media > a > img {
   width: 160px;
   height: 90px;
+}
+
+sw-video-details {
+  width: auto;
 }
 
 sw-video-details > img {
